# rpi-pico

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  build-cmake.sh  build-make.sh  build.sh  write.sh
src/: main.c
